--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -428,10 +428,10 @@
                                                         class="product-permalink"></a>
                                                     <div class="thumbnail">
                                                         <a href="/product/detail/{{this._id}}"><img
-                                                                src="{{this.gallery}}" alt=""></a>
+                                                                src="/images/{{this.gallery}}" alt=""></a>
                                                     </div>
                                                     <div class="thumbnail hover">
-                                                        <img src="{{this.thumbnail}}" alt="">
+                                                        <img src="/images/{{this.thumbnail}}" alt="">
                                                     </div>
                                                     <div class="actions">
                                                         <ul>
@@ -693,7 +693,8 @@
 
 <div id="data-cart" class="cart-menu">
     <div class="wrap">
-        <a href="#0" class="close-trigger" close-button><i class="ri-close-line"></i></a>
+        <a href="" class="close-trigger active" close-button>
+            <i class="ri-close-line"></i></a>
         <div class="scrollto cart-outer">
             <div class="wrapper">
                 <div class="cart-list">
@@ -720,7 +721,7 @@
                                                 </div>
                                                 <div class="thumbnail">
                                                     <a href="">
-                                                        <img src="{{this.gallery}}" alt="">
+                                                        <img src="/images/{{this.gallery}}" alt="">
                                                     </a>
                                                 </div>
                                             </div>
